# voxel_game

./: .gitignore  Cargo.toml  a.yaml
res/: a.txt  chunk.frag  chunk.mat.yaml  chunk.vert  chunk2.frag  chunk2.vert  chunk_cull.comp  cube.frag  cube.mat.yaml  cube.vert  final.frag  hello_tri.frag  hello_tri.vert  screen_quad.vert
src/: main.rs  util.rs
src/game/: mod.rs
src/game/physics/: mod.rs  ray.rs
src/game/voxels/: chunk.rs  mod.rs  worldgen.rs
src/render/: cube.rs  mod.rs  renderpasses.rs  renderpassmanager.rs
src/render/chunk_render/: chunk_mesh_manager.rs  chunk_renderer.rs  mesher.rs  mod.rs  primative_manager.rs  renderer.rs  stencil_buffer.rs
