[package]
name = "vk_ex_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_renderer = {path = "../vk_ash_engine"}
ash = "0.37.0+1.3.209"
eyre = "0.6.8"
vk-shader-macros = "0.2.8"
bytemuck = {version="1.12.1", features = ["derive"]}
specs = "0.18.0"
# nalgebra = "0.31.2"
winit = "0.27.2"
rayon = "1.5.3"
noise = "0.8.2"
glam = "0.22.0"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
# lto = true
# panic = "abort"


[unstable]
vec_into_raw_parts=true


[profile.dev]
build-override.debug = 2
